working on producers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,9 @@ project(ProducerConsumer)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(ProducerConsumer main.cpp)
+
+find_package(Threads REQUIRED)
+
+target_link_libraries(ProducerConsumer
+        ${CMAKE_THREAD_LIBS_INIT}
+        )
